# chatbot-interativo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
src/: main.py
src/agents/: chatbot.py  validator.py
src/config/: settings.py
src/database/: vector_store.py
src/memory/: knowledge_base.py
src/ui/: app.py
src/utils/: pdf_extract.py
tests/: test_chatbot.py
